--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ ul,ol{
     font-size: 14px;
     width: 100%;
     height: 100%;
-    text-align: left;
+    text-align: center;
     border: 2px solid #ddd;;
 }
 .address td:not(.last-td){
@@ -203,6 +203,11 @@ th {
     width: 100%;
     height: 100%;
 }
+.map{
+    width: 168px;
+    height: 105px;
+    border: none;
+}
 /*------------------------------ Registration*/
 .form-wrapper{
     display: flex;
@@ -221,7 +226,7 @@ th {
     margin-bottom: 20px;
 }
 .last-row{
-    margin-bottom: 35px;
+    margin-bottom: 15px;
 }
 .input-wrapper{
     display: flex;
@@ -291,5 +296,135 @@ h4 , h5 {
     background-color: #033948;
     color: #ddf4e0e3;
     border-radius: 20px;
-    margin-top: 50px;
+    margin-top: 60px;
+}
+/*-----------------------@media*/
+@media (max-width:768px){
+    .center{
+        width: 98%;
+    }
+    .menu-bar{
+        width: 65%;
+        height: 30px;
+        font-size: 10px;
+        margin-left: 53px;
+        text-align: center;
+        margin-top: 42px;
+    }
+    .logo img{
+        width: 95px;
+        height: 95px;
+        margin-top: -19px;
+    }
+    .site-name{
+        width: 80%;
+        height:15px;
+        font-size: 16px;
+        margin-top: -16px;
+        margin-left:60px;
+    }
+    .content{
+        left: 12% !important;
+        top: 20%;
+    }
+    .menu-item {
+        top: 53px;
+    }
+    .home{
+        left: 114px;
+    }
+    .about{
+        left: 327px;
+    }
+    .contact{
+        left: 365px;
+    }
+    .game-info{
+        left: 157px;
+    }
+    .rules{
+        left: 219px;
+    }
+    .registration-form{
+        left: 257px;
+    }
+    .norm-height{
+        height: 770px;
+    }
+    .long-height{
+        height: 1550px;
+    }
+    
+ /*-----------------------registration*/  
+    .form-wrapper{
+        font-size: 9px;
+        width: 65%;
+        margin: 0px;
+    }
+    .text{
+        width: 90%;
+    }
+    .row{
+        margin-bottom: 10px;
+    }
+    .last-row{
+        margin-bottom: 7px;
+    }
+    .input-wrapper:not(:last-child){
+        padding-right: 7px;
+    }
+    .check-box{
+        margin-left:3px;
+    }
+    .date-drop-down{
+        margin-left: 2px;
+        width: 87px;
+    }
+    .drop-down-school{
+        margin-left: 5px;
+        width: 87px;
+    }
+    .submit{
+        width: 90px;
+        height: 30px;
+        font-size: 10px;
+        border-radius: 15px;
+        margin-top: 40px;
+    }
+    .grade-checkbox{
+        margin-left: 3px;
+    }
+    /*-------------------------font-size*/
+    .text{
+        font-size: 10px;
+    }
+    
+    .first-schedule {
+        font-size: 10px;
+    }
+    .address {
+        font-size: 10px;
+    }
+    .title{
+        padding-left: 15px;
+        font-size: 12px;
+    }
+    .head-note {
+        padding-left: 15px;
+        font-size: 11px;
+    }
+    .footer{
+        font-size: 10px;
+    }
+    .footer-table{
+        font-size: 10px;
+    }
+    .map{
+        width: 100px;
+        height: 65px;
+    }
+    li{
+        text-align: justify;
+        font-size: 10px; 
+    }
 }
