--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ body{
     border: 2px solid #a4ff49;
     margin-top: 20px;
 }
-
 .menu-bar div a {
     color:#a4ff49;
     text-decoration: none;
@@ -81,7 +80,6 @@ body{
     left: 500px;
 }
 .content{    
-    /* white-space: nowrap; */
     position: absolute;
     z-index: 0;
     top: 215px;
@@ -109,6 +107,78 @@ text-align: justify;
     font-weight: bold;
     font-size: 18px;
 }
+/*----------------------------Mobile-menu-bar*/
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+    z-index: 2;
+  }
+  .mobile-logo{
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    z-index: 3;
+    top: 12px;
+}
+.mobile-site-name{
+    font-size: 14px;
+    font-weight: bold;
+    color: #033948;
+    text-align: center;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 38px;
+}
+.mobile-menu-bar{
+    display: none;
+}
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  .topnav a.icon {
+    background: #033948;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 5px 14px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: #033948;
+  }
+  
+  .active {
+    background-color: #033948;
+    color: #ddf4e0e3;
+  }
+  /*----------------------------------------------validation-page*/
+  .validation-height{
+    height: 2000px;
+  }
+  .confirmation-button{
+      text-align: center;
+  }
+  .conf-button{
+      width: 14%;
+      height: 2%;
+      background-color: #033948;
+      color:#ddf4e0e3 ;
+      border-radius: 25px;
+      margin-top: 50px;
+      margin-left: 20px;
+  }
 /*-----------------------------------rules */
 .header{
     margin: 0 auto;
@@ -303,28 +373,21 @@ h4 , h5 {
     .center{
         width: 98%;
     }
-    .menu-bar{
-        width: 65%;
-        height: 30px;
-        font-size: 10px;
-        margin-left: 53px;
-        text-align: center;
-        margin-top: 42px;
+    .mobile-menu-bar{
+        display: block;
     }
-    .logo img{
-        width: 95px;
-        height: 95px;
-        margin-top: -19px;
+    .head{
+        display: none;
     }
     .site-name{
-        width: 80%;
+        width: 99%;
         height:15px;
-        font-size: 16px;
+        font-size: 15px;
         margin-top: -16px;
-        margin-left:60px;
+        margin-left: 64px;
     }
     .content{
-        left: 12% !important;
+        left: 10% !important;
         top: 20%;
     }
     .menu-item {
@@ -354,12 +417,18 @@ h4 , h5 {
     .long-height{
         height: 1550px;
     }
+    .head{
+        top: 45px;
+    }
     
  /*-----------------------registration*/  
     .form-wrapper{
         font-size: 9px;
-        width: 65%;
+        width: 100%;
         margin: 0px;
+    }
+    form{
+        width: 100% !important;
     }
     .text{
         width: 90%;
@@ -394,6 +463,10 @@ h4 , h5 {
     .grade-checkbox{
         margin-left: 3px;
     }
+
+.grade-checkbox-pre ~ .grade-checkbox{
+    margin-left: 21px;
+    }
     /*-------------------------font-size*/
     .text{
         font-size: 10px;
@@ -426,5 +499,14 @@ h4 , h5 {
     li{
         text-align: justify;
         font-size: 10px; 
+    }
+    /*-----------------------------show-data*/
+    .conf-button{
+        width: 29%;
+        height: 2%;
+        font-size: 14px;
+    }
+    .validation-table{
+        width: 400px;
     }
 }
