--- a/styles.css
+++ b/styles.css
@@ -164,20 +164,55 @@ text-align: justify;
     color: #ddf4e0e3;
   }
   /*----------------------------------------------validation-page*/
-  .validation-height{
-    height: 2000px;
-  }
   .confirmation-button{
       text-align: center;
   }
   .conf-button{
       width: 14%;
-      height: 2%;
+      height: 30px;
       background-color: #033948;
-      color:#ddf4e0e3 ;
+      color:#a4ff49 ;
       border-radius: 25px;
-      margin-top: 50px;
       margin-left: 20px;
+      font-size: 15px;
+      font-weight: bold;
+  }
+  .validation-table{
+    width: 70%;
+    text-align: left;
+    margin: 0 auto;
+    border-collapse: collapse;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    color: #033948;
+}
+.validation-table tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+.validation-table tr:hover {
+    background-color: #ddd;
+}
+.validation-table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #033948;
+    color: #a4ff49;
+    text-align: center;
+  }
+ .validation-table tr ,.validation-table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  .validation-center{
+    text-align: center;
+    font-family: sans-serif;
+    color: #033948;
+    margin-bottom: 30px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .question{
+    margin-top: 80px;
   }
 /*-----------------------------------rules */
 .header{
@@ -239,7 +274,7 @@ ul,ol{
     border-bottom: 1px solid  #033948;
     padding: 10px;
 }
-th {
+.first-schedule th {
     text-decoration: underline;
   }
   .last-row{
@@ -368,6 +403,20 @@ h4 , h5 {
     border-radius: 20px;
     margin-top: 60px;
 }
+/*-----------------------------------------DROP-DOWN*/
+.drop-down-button{
+    border-radius: 50%;
+    background-color: transparent;
+    font-size: 12px;
+    font-weight: bold;
+    color:#033948 ;
+    float: left;
+    margin-right: 6px;
+    margin-top: 5px;
+    cursor: pointer;
+    display: none;
+}
+
 /*-----------------------@media*/
 @media (max-width:768px){
     .center{
@@ -389,6 +438,7 @@ h4 , h5 {
     .content{
         left: 10% !important;
         top: 20%;
+        width: 80%;
     }
     .menu-item {
         top: 53px;
@@ -420,7 +470,9 @@ h4 , h5 {
     .head{
         top: 45px;
     }
-    
+    .header{
+        width: 112%;
+    }
  /*-----------------------registration*/  
     .form-wrapper{
         font-size: 9px;
@@ -503,10 +555,18 @@ h4 , h5 {
     /*-----------------------------show-data*/
     .conf-button{
         width: 29%;
-        height: 2%;
-        font-size: 14px;
+        height: 30px;
+        font-size: 10px;
     }
+
     .validation-table{
-        width: 400px;
+        font-size: 12px;
+    }
+    /*--------------------------------drop-down*/
+    .drop-down-button{
+        display: block;
+    }
+    .drop-down-content{
+        display: none;
     }
 }
